# multi-dwpc

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  app.py  matplotlibrc  pyproject.toml
archive/hpc/: intermediate_matrices_lv_array.sbatch  lv_dwpc_cache_warmup_array.sbatch  lv_permutations_array.sbatch  lv_random_controls_array.sbatch  lv_summary_array.sbatch  random_path_counts_length5.sbatch  submit_lv_intermediate_sharing.sh  submit_lv_intermediate_sharing_sensitivity.sh  submit_lv_single_target_refactor.sh  submit_year_direct_rebuild.sh  submit_year_subgraph_intermediates.sh  variance_and_rank_experiments_README.md  year_dwpc_array.sbatch  year_intermediate_sharing_array.sbatch  year_null_variance.sbatch  year_permutations_array.sbatch  year_random_controls_array.sbatch  year_rank_stability.sbatch  year_subgraph_intermediates_array.sbatch  year_top_subgraphs_adaptive.sbatch
archive/scripts/: extract_top_paths_local.py  identify_year_top_paths.py  intermediate_matrices.py  lv_descriptor_outcome_analysis.py  plot_path_instances_networks.py  plot_random_path_counts.py  plot_top_paths_networks.py  year_intermediate_sharing_2016_2024.py  year_pathway_coverage.py
archive/src/: notebook_utils.py  paired_per_go_term_analysis.py  random_sampling.py
docs/: methods_lv_and_year_go_analysis.md  web_tool_requirements.md
env/: environment.yml
figures/: Filtering.ai  year_results.ai
hpc/: intermediate_matrices_lv_array.sbatch  intermediate_matrices_year_array.sbatch  lv_dwpc_cache_warmup_array.sbatch  lv_group_qc_aggregate.sbatch  lv_null_variance_aggregate.sbatch  lv_permutations_array.sbatch  lv_precompute_finalize.sbatch  lv_prepare.sbatch  lv_random_controls_array.sbatch  lv_rank_stability_aggregate.sbatch  lv_summary_array.sbatch  methods_lv_and_year_go_analysis.md  random_path_counts_length5.sbatch  replot_e2e.sh  submit_end_to_end.sh  submit_intermediate_matrices_lv.sh  submit_intermediate_matrices_year.sh  submit_lv_full_pipeline.sh  submit_lv_full_rebuild_rerun.sh  submit_lv_homeostasis_rebuild.sh  submit_lv_intermediate_sharing.sh  submit_lv_single_target_refactor.sh  submit_prewarm_dwpc.sh  submit_smoke_test.sh  submit_variance_rank_rerun.sh  submit_year_direct_rebuild.sh  submit_year_full_pipeline.sh  submit_year_intermediate_sharing.sh  submit_year_subgraph_intermediates.sh  variance_and_rank_experiments_README.md  year_dwpc_array.sbatch  year_dwpc_cache_warmup.sbatch  year_dwpc_cache_warmup_array.sbatch  year_intermediate_sharing_array.sbatch  year_null_variance.sbatch  year_permutations_array.sbatch  year_random_controls_array.sbatch  year_rank_stability.sbatch  year_subgraph_intermediates_array.sbatch  year_top_subgraphs_adaptive.sbatch
notebooks/: 1.1_data_loading.ipynb  1.2_percent_change_and_filtering.ipynb  1.3_jaccard_similarity_and_filtering.ipynb  1.4_permutation_null_datasets.ipynb  1.5_random_datasets.ipynb  2_compute_hetio_stat_via_docker.ipynb
output/lv_multidwpc/: feature_manifest.csv  lv_real_gene_indices.csv  real_feature_scores.csv
output/lv_multidwpc_m2/: gene_feature_scores.npy  gene_ids.npy  lv_gene_target_pairs.csv  lv_metapath_results.csv  lv_metapaths_top_selected.csv  lv_pair_dwpc_top_selected.csv  lv_real_gene_indices.csv  lv_target_map.csv  lv_top_genes.csv  lv_top_genes_summary.csv  null_sampling_qc.csv  null_streaming_summary.csv  real_feature_scores.csv  top_pairs.csv  top_paths.csv
output/lv_multidwpc_m6/: feature_manifest.csv  gene_degree_table.csv  lv_metapath_results.csv  lv_real_slots.csv  null_sampling_qc.csv  null_streaming_summary.csv  smoke_lv_loadings.csv  target_sets.csv  target_sets_summary.csv
scripts/: 1_1_data_loading.py  1_2_percent_change_and_filtering.py  1_3_jaccard_similarity_and_filtering.py  1_4_permutation_null_datasets.py  1_5_random_datasets.py  2_compute_dwpc_direct.py  aggregate_subgraph_intermediates.py  benchmark_dwpc_methods.py  benchmark_dwpc_permutation_scaling.py  choose_lv_b_from_elbows.py  choose_year_b_from_elbows.py  compute_dwpc_direct.py  divergence_score_analysis.py  download_lv_loadings.py  extract_top_paths_local.py  generate_global_summary.py  go_hierarchy_analysis.py  identify_lv_rank_top_paths.py  identify_lv_top_paths.py  identify_year_top_paths.py  intermediate_matrices.py  load_data.py  lv_descriptor_outcome_analysis.py  lv_generate_control_replicates.py  lv_group_qc_experiment.py  lv_intermediate_sharing.py  lv_intermediate_sharing_sensitivity.py  lv_multidwpc_analysis.py  lv_null_variance_experiment.py  lv_pathway_coverage.py  lv_performance_analysis.py  lv_prepare_experiment.py  lv_rank_stability_experiment.py  metapath_signature_analysis.py  percent_change_and_filtering.py  permutation_null_datasets.py  pipeline_production.py  pipeline_publication.py  pipeline_year_experiment.py  plot_dwpc_benchmark.py  (+42 more)
scripts/api/: benchmark_dwpc_permutation_scaling.py  lookup_dwpc_api.py  validate_dwpc_concordance.py  year_api_compare_statistics_to_mean_dwpc.py  year_api_sampled_statistics_analysis.py
scripts/data_prep/: build_null_datasets.py  build_year_top_genes.py  compute_dwpc_direct.py  jaccard_similarity_and_filtering.py  load_data.py
scripts/experiments/: dwpc_filter_sensitivity.py  lv_compute_replicate_summaries.py  (+10 more)
src/: __init__.py  bipartite_nulls.py  dwpc_api.py  dwpc_direct.py  dwpc_validation.py  filtering.py  go_processing.py  intermediate_sharing.py  lv_data_prep.py  lv_dwpc.py  lv_explicit_replicates.py  lv_inputs.py  lv_nulls.py  lv_pairs.py  lv_precompute.py  lv_replicate_analysis.py  lv_stats.py  lv_subgraphs.py  lv_targets.py  multi_dwpc_query.py  path_enumeration.py  pathway_coverage.py  random_sampling.py  replicate_analysis.py  replicate_workspace.py  result_normalization.py  similarity.py  visualization.py  year_replicate_analysis.py  year_statistics.py
tests/: test_dwpc_validation.py  test_lv_null_variance_smoke.py  test_lv_replicate_analysis.py  test_replicate_analysis_rank_stability.py  test_replicate_analysis_resampling.py  test_result_normalization.py  test_year_null_variance_smoke.py  test_year_replicate_analysis.py  test_year_statistics.py
(+29 files in other folders)
