[project]
name = "multi-dwpc"
version = "0.1.0"
description = "Scripts testing aggregate degree weighted path count (DWPC) statistics"
readme = "README.md"
license = "BSD-2-Clause-Patent"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "jupytext",
    "tqdm",
    "httpx",
    "pyarrow",
    "hetmatpy==0.1.0",
    "hetnetpy @ git+https://github.com/hetio/hetio.git@0a81e9ea675e2c20f235f5d74598053c1332cb85",
    "hetnet-analysis @ git+https://github.com/CU-DBMI/hetionet-analysis.git@f371064da1498ac984aa6ec6ed0ba2739c7b0259",
]

[project.optional-dependencies]
dev = [
    "jupytext",
    "poethepoet",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.poe.tasks]
# Individual pipeline steps
load-data = "python scripts/load_data.py"
filter-change = "python scripts/percent_change_and_filtering.py"
go-hierarchy-analysis = "python scripts/go_hierarchy_analysis.py"
filter-jaccard = "python scripts/jaccard_similarity_and_filtering.py"
gen-permutation = "python scripts/permutation_null_datasets.py"
gen-random = "python scripts/random_null_datasets.py"

# DWPC computation
# Option A: Direct matrix computation (no Docker required)
validate-dwpc-concordance = "python scripts/validate_dwpc_concordance.py"
compute-dwpc-direct = "python scripts/compute_dwpc_direct.py"
warmup-dwpc-cache = { shell = "python scripts/compute_dwpc_direct.py --warmup-cache --output-dir ${YEAR_DWPC_OUTPUT_DIR:-output/dwpc_direct/all_GO_positive_growth} --n-workers ${YEAR_DWPC_WARMUP_N_WORKERS:-2}" }
# Option B: Via Docker API (requires connectivity-search-backend running)
lookup-dwpc-api = "python scripts/lookup_dwpc_api.py"
lookup-dwpc-api-with-docker = { shell = "COMPOSE_PROGRESS=plain open -a Docker && until docker info >/dev/null 2>&1; do echo 'Waiting for Docker daemon...'; sleep 5; done && cd connectivity-search-backend && COMPOSE_PROGRESS=plain ./run_stack.sh up --build -d && cd .. && python scripts/wait_for_api.py && poe lookup-dwpc-api && cd connectivity-search-backend && COMPOSE_PROGRESS=plain docker compose down" }

# Post-DWPC analysis
metapath-signature-analysis = "python scripts/metapath_signature_analysis.py"
divergence-score-analysis = "python scripts/divergence_score_analysis.py"

# Testing
test-dwpc-accuracy = "python scripts/test_dwpc_accuracy.py"
benchmark-dwpc = "python scripts/benchmark_dwpc_methods.py"
benchmark-dwpc-plots = "python scripts/plot_dwpc_benchmark.py"
year-null-variance-exp = { shell = "python3 scripts/year_null_variance_experiment.py --results-dir ${YEAR_NULL_VAR_RESULTS_DIR:-output/dwpc_direct/all_GO_positive_growth/results} --output-dir ${YEAR_NULL_VAR_OUTPUT_DIR:-output/year_null_variance_exp} --b-values ${YEAR_NULL_VAR_B_VALUES:-1,2,5,10,20} --seeds ${YEAR_NULL_VAR_SEEDS:-11,22,33,44,55}" }
year-null-variance-plots = { shell = "python3 scripts/plot_year_null_variance_results.py --analysis-dir ${YEAR_NULL_VAR_ANALYSIS_DIR:-output/year_null_variance_exp/year_null_variance_experiment}" }
year-rank-stability-exp = { shell = "python3 scripts/year_rank_stability_experiment.py --results-dir ${YEAR_RANK_STAB_RESULTS_DIR:-output/dwpc_direct/all_GO_positive_growth/results} --output-dir ${YEAR_RANK_STAB_OUTPUT_DIR:-output/year_rank_stability_exp} --b-values ${YEAR_RANK_STAB_B_VALUES:-1,2,5,10,20} --seeds ${YEAR_RANK_STAB_SEEDS:-11,22,33,44,55} --top-k-metapaths ${YEAR_RANK_STAB_TOP_K:-10}" }
year-rank-stability-plots = { shell = "python3 scripts/plot_year_rank_stability_results.py --analysis-dir ${YEAR_RANK_STAB_ANALYSIS_DIR:-output/year_rank_stability_exp/year_rank_stability_experiment}" }
track-year-top-metapaths = { shell = "python3 scripts/track_year_top_metapaths.py --analysis-dir ${YEAR_RANK_STAB_ANALYSIS_DIR:-output/year_rank_stability_exp/year_rank_stability_experiment} --reference-seed ${YEAR_TRACK_REF_SEED:-11} --top-n ${YEAR_TRACK_TOP_N:-5}" }
lv-prepare-exp = { shell = "python3 scripts/lv_prepare_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment} --lv-loadings ${LV_LOADINGS_PATH} --resume --metapath-limit-per-target ${LV_METAPATH_LIMIT:-2}" }
lv-prepare-exp-all-metapaths = { shell = "python3 scripts/lv_prepare_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment_all_metapaths} --lv-loadings ${LV_LOADINGS_PATH} --resume --all-metapaths" }
lv-prepare-exp-more-b = { shell = "python3 scripts/lv_prepare_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment_more_B} --lv-loadings ${LV_LOADINGS_PATH} --resume --all-metapaths" }
lv-gen-permutation = { shell = "python3 scripts/lv_generate_control_replicates.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment} --control permuted --n-replicates ${LV_N_REPLICATES:-100}" }
lv-gen-random = { shell = "python3 scripts/lv_generate_control_replicates.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment} --control random --n-replicates ${LV_N_REPLICATES:-100}" }
lv-compute-replicate-summaries = { shell = "python3 scripts/lv_compute_replicate_summaries.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment}" }
lv-null-variance-exp = { shell = "python3 scripts/lv_null_variance_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment} --b-values ${LV_NULL_VAR_B_VALUES:-1,2,5,10,20} --seeds ${LV_NULL_VAR_SEEDS:-11,22,33,44,55}" }
lv-null-variance-plots = { shell = "python3 scripts/plot_lv_null_variance_results.py --analysis-dir ${LV_NULL_VAR_ANALYSIS_DIR:-output/lv_experiment/lv_null_variance_experiment}" }
lv-rank-stability-exp = { shell = "python3 scripts/lv_rank_stability_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment} --b-values ${LV_RANK_STAB_B_VALUES:-1,2,5,10,20} --seeds ${LV_RANK_STAB_SEEDS:-11,22,33,44,55} --top-k-metapaths ${LV_RANK_STAB_TOP_K:-5,10}" }
lv-rank-stability-plots = { shell = "python3 scripts/plot_lv_rank_stability_results.py --analysis-dir ${LV_RANK_STAB_ANALYSIS_DIR:-output/lv_experiment/lv_rank_stability_experiment}" }
lv-rank-seed-comparisons = { shell = "python3 scripts/plot_lv_rank_seed_comparisons.py --analysis-dir ${LV_RANK_STAB_ANALYSIS_DIR:-output/lv_experiment/lv_rank_stability_experiment} --reference-seed ${LV_RANK_REF_SEED:-11}" }
lv-group-qc-exp = { shell = "python3 scripts/lv_group_qc_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment} --analysis-dir ${LV_RANK_STAB_ANALYSIS_DIR:-output/lv_experiment/lv_rank_stability_experiment} --qc-output-dir ${LV_GROUP_QC_OUTPUT_DIR:-output/lv_experiment/lv_group_qc_experiment} --gap-b ${LV_GROUP_QC_GAP_B:-5} --score-gap-max-k ${LV_GROUP_QC_SCORE_GAP_MAX_K:-20} --diagnostic-b ${LV_GROUP_QC_DIAGNOSTIC_B:-5} --random-promiscuity-tolerance ${LV_RANDOM_PROM_TOL:-2} --near-tie-threshold ${LV_GROUP_QC_NEAR_TIE_THRESHOLD:-0.10}" }
lv-group-qc-plots = { shell = "python3 scripts/plot_lv_group_qc_results.py --qc-dir ${LV_GROUP_QC_OUTPUT_DIR:-output/lv_experiment/lv_group_qc_experiment}" }
lv-score-separation-plots = { shell = "python3 scripts/plot_lv_score_separation.py --qc-dir ${LV_GROUP_QC_OUTPUT_DIR:-output/lv_experiment/lv_group_qc_experiment}" }
lv-descriptor-outcome-analysis = { shell = "python3 scripts/lv_descriptor_outcome_analysis.py --qc-dir ${LV_GROUP_QC_OUTPUT_DIR:-output/lv_experiment/lv_group_qc_experiment} --workspace-dir ${LV_OUTPUT_DIR:-output/lv_experiment} --analysis-dir ${LV_RANK_STAB_ANALYSIS_DIR:-output/lv_experiment/lv_rank_stability_experiment}" }
lv-rank-top-paths = { shell = "python3 scripts/identify_lv_rank_top_paths.py --analysis-dir ${LV_RANK_STAB_ANALYSIS_DIR:-output/lv_experiment/lv_rank_stability_experiment} --workspace-dir ${LV_OUTPUT_DIR:-output/lv_experiment} --top-metapaths-per-run ${LV_RANK_TOP_METAPATHS:-2} --top-pairs ${LV_RANK_TOP_PAIRS:-10} --top-paths ${LV_RANK_TOP_PATHS:-5}" }
track-lv-top-metapaths = { shell = "python3 scripts/track_lv_top_metapaths.py --analysis-dir ${LV_RANK_STAB_ANALYSIS_DIR:-output/lv_experiment/lv_rank_stability_experiment} --reference-seed ${LV_TRACK_REF_SEED:-11} --top-n ${LV_TRACK_TOP_N:-5}" }
lv-null-variance-exp-all-metapaths = { shell = "python3 scripts/lv_null_variance_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment_all_metapaths} --b-values ${LV_NULL_VAR_B_VALUES:-1,2,5,10,20} --seeds ${LV_NULL_VAR_SEEDS:-11,22,33,44,55}" }
lv-rank-stability-exp-all-metapaths = { shell = "python3 scripts/lv_rank_stability_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment_all_metapaths} --b-values ${LV_RANK_STAB_B_VALUES:-1,2,5,10,20} --seeds ${LV_RANK_STAB_SEEDS:-11,22,33,44,55} --top-k-metapaths ${LV_RANK_STAB_TOP_K:-5,10}" }
lv-null-variance-exp-more-b = { shell = "python3 scripts/lv_null_variance_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment_more_B} --b-values ${LV_NULL_VAR_B_VALUES:-1,2,5,10,20} --seeds ${LV_NULL_VAR_SEEDS:-11,22,33,44,55}" }
lv-rank-stability-exp-more-b = { shell = "python3 scripts/lv_rank_stability_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment_more_B} --b-values ${LV_RANK_STAB_B_VALUES:-1,2,5,10,20} --seeds ${LV_RANK_STAB_SEEDS:-11,22,33,44,55} --top-k-metapaths ${LV_RANK_STAB_TOP_K:-5,10}" }
lv-rank-stability-plots-more-b = { shell = "python3 scripts/plot_lv_rank_stability_results.py --analysis-dir ${LV_RANK_STAB_ANALYSIS_DIR:-output/lv_experiment_more_B/lv_rank_stability_experiment}" }
lv-group-qc-exp-more-b = { shell = "python3 scripts/lv_group_qc_experiment.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment_more_B} --analysis-dir ${LV_RANK_STAB_ANALYSIS_DIR:-output/lv_experiment_more_B/lv_rank_stability_experiment} --qc-output-dir ${LV_GROUP_QC_OUTPUT_DIR:-output/lv_experiment_more_B/lv_group_qc_experiment} --gap-b ${LV_GROUP_QC_GAP_B:-5} --score-gap-max-k ${LV_GROUP_QC_SCORE_GAP_MAX_K:-20} --diagnostic-b ${LV_GROUP_QC_DIAGNOSTIC_B:-5} --random-promiscuity-tolerance ${LV_RANDOM_PROM_TOL:-2} --near-tie-threshold ${LV_GROUP_QC_NEAR_TIE_THRESHOLD:-0.10}" }
lv-group-qc-plots-more-b = { shell = "python3 scripts/plot_lv_group_qc_results.py --qc-dir ${LV_GROUP_QC_OUTPUT_DIR:-output/lv_experiment_more_B/lv_group_qc_experiment}" }
lv-score-separation-plots-more-b = { shell = "python3 scripts/plot_lv_score_separation.py --qc-dir ${LV_GROUP_QC_OUTPUT_DIR:-output/lv_experiment_more_B/lv_group_qc_experiment}" }
pipeline-year-exp = { shell = "python3 scripts/pipeline_year_experiment.py --stage pipeline --resume" }

# Grouped tasks
pipeline-production = "python scripts/pipeline_production.py"
pipeline-publication = "python scripts/pipeline_publication.py"
pipeline-null = ["gen-permutation", "gen-random"]
direct-dwpc-analyses = ["compute-dwpc-direct", "year-null-variance-exp", "year-rank-stability-exp"]

# Utility tasks
convert-notebooks = { shell = "for nb in notebooks/1.*.ipynb; do jupytext --to py:percent -o scripts/$(basename \"$nb\" .ipynb | tr '.' '_').py \"$nb\"; done" }
clean = { shell = "rm -rf data/ output/ gene_ontology/" }
download-lv-loadings = { shell = "python3 scripts/download_lv_loadings.py --owner greenelab --repo phenoplier --ref main --source-path data/input/multiplier --exact-file multiplier_model_z.tsv.gz --output-dir ${LV_LOADINGS_DIR:-data/lv_loadings}" }
top-bp-paths = "python scripts/top_bps_by_metapath.py"
identify-year-top-paths = { shell = "python3 scripts/identify_year_top_paths.py --years ${TOP_PATH_YEARS:-2016 2024}" }
identify-lv-top-paths = { shell = "python3 scripts/identify_lv_top_paths.py --output-dir ${LV_OUTPUT_DIR:-output/lv_experiment}" }
plot-top-paths-network = "python scripts/plot_top_paths_networks.py"
extract-top-paths-local = "python scripts/extract_top_paths_local.py"
plot-path-instances-network = "python scripts/plot_path_instances_networks.py"

# LV multi-DWPC milestones
lv-top-genes = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage top-genes --lv-loadings ${LV_LOADINGS_PATH} --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc}" }
lv-target-sets = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage target-sets --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc}" }
lv-real-dwpc = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage real-dwpc --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc}" }
lv-precompute-scores = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage precompute-scores --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc} --n-workers-precompute ${LV_N_WORKERS_PRECOMP:-4} --max-metapath-length ${LV_MAX_METAPATH_LENGTH:-3}" }
lv-nulls = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage nulls --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc} --n-degree-bins ${LV_N_DEGREE_BINS:-10} --b-min ${LV_B_MIN:-200} --b-max ${LV_B_MAX:-1000} --b-batch ${LV_B_BATCH:-100} --adaptive-p-low ${LV_ADAPTIVE_P_LOW:-0.005} --adaptive-p-high ${LV_ADAPTIVE_P_HIGH:-0.20}" }
lv-stats = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage stats --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc}" }
lv-top-subgraphs = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage top-subgraphs --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc} --top-metapaths ${LV_TOP_METAPATHS:-10} --top-pairs ${LV_TOP_PAIRS:-10} --top-paths ${LV_TOP_PATHS:-5}" }
lv-plot-subgraphs = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage plot-subgraphs --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc}" }
lv-performance-plots = { shell = "python3 scripts/lv_performance_analysis.py --results ${LV_OUTPUT_DIR:-output/lv_multidwpc}/lv_metapath_results.csv --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc}/performance_plots" }

lv-pipeline-fast = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage pipeline-fast --resume --lv-loadings ${LV_LOADINGS_PATH} --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc}" }
lv-pipeline-fast-smoke = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage pipeline-fast --smoke --resume --output-dir output/lv_multidwpc_smoke_opt --metapath-limit-per-target 5 --b-min 20 --b-max 50 --b-batch 10" }
lv-pipeline-subgraphs = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage pipeline-subgraphs --resume --output-dir ${LV_OUTPUT_DIR:-output/lv_multidwpc}" }

lv-pipeline-smoke = "python3 scripts/lv_multidwpc_analysis.py --stage pipeline --smoke --output-dir output/lv_multidwpc_smoke"
lv-m1-test = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage top-genes --smoke --output-dir output/lv_multidwpc_m1_smoke && test -f output/lv_multidwpc_m1_smoke/lv_top_genes.csv && test -f output/lv_multidwpc_m1_smoke/lv_top_genes_summary.csv" }
lv-m2-test = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage top-genes --smoke --output-dir output/lv_multidwpc_m2 && python3 scripts/lv_multidwpc_analysis.py --stage target-sets --output-dir output/lv_multidwpc_m2 && python3 scripts/lv_multidwpc_analysis.py --stage precompute-scores --output-dir output/lv_multidwpc_m2 --metapath-limit-per-target 5 --n-workers-precompute 2 && test -f output/lv_multidwpc_m2/gene_feature_scores.npy && test -f output/lv_multidwpc_m2/feature_manifest.csv && test -f output/lv_multidwpc_m2/gene_ids.npy" }
lv-m3-test = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage nulls --output-dir output/lv_multidwpc_m2 --n-degree-bins 10 --b-min 20 --b-max 50 --b-batch 10 --adaptive-p-low 0.01 --adaptive-p-high 0.25 && test -f output/lv_multidwpc_m2/null_streaming_summary.csv && test -f output/lv_multidwpc_m2/null_sampling_qc.csv" }
lv-m4-test = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage stats --output-dir output/lv_multidwpc_m2 && test -f output/lv_multidwpc_m2/lv_metapath_results.csv && python3 -c \"import pandas as pd; df=pd.read_csv('output/lv_multidwpc_m2/lv_metapath_results.csv'); req={'p_perm','p_rand','p_perm_fdr','p_rand_fdr','d_perm','d_rand','min_d','diff_perm','diff_rand','min_diff'}; miss=req-set(df.columns); assert not miss, miss\" " }
lv-m5-test = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage top-subgraphs --output-dir output/lv_multidwpc_m2 --top-metapaths 3 --top-pairs 3 --top-paths 3 && python3 scripts/lv_multidwpc_analysis.py --stage plot-subgraphs --output-dir output/lv_multidwpc_m2 && test -f output/lv_multidwpc_m2/top_pairs.csv && test -f output/lv_multidwpc_m2/top_paths.csv && test -d output/lv_multidwpc_m2/plots" }
lv-m6-test = { shell = "python3 scripts/lv_multidwpc_analysis.py --stage pipeline-fast --smoke --output-dir output/lv_multidwpc_m6 --metapath-limit-per-target 5 --b-min 20 --b-max 50 --b-batch 10 && test -f output/lv_multidwpc_m6/lv_metapath_results.csv" }
